--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -17,9 +17,16 @@
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke:#FF7070;
     -webkit-text-stroke-width: 4px;
-    position: absolute;
 }
 #frontText{
     font-family: 'Josefin Sans', sans-serif;
-
+    font-weight: bolder;
+}
+h1{
+    text-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
+}
+h1:hover {
+    transition: .5s;
+    text-shadow: 7px 2px 2px rgb(58, 71, 255),
+                -7px 2px 2px rgb(255, 58, 71);
 }
